deploy/loadbalancer/networking-tools-loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-loadbalancer
  namespace: networking-tools
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "le-clusterissuer"
spec:
  rules:
  - host: pihole.home.jeffbeagley.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port: 
              number: 9000
  - host: speedtest.home.jeffbeagley.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest
            port: 
              number: 80
  tls:
  - hosts:
    - "home.jeffbeagley.com"
    - "*.home.jeffbeagley.com"
    secretName: cert-wildcard-home-jeffbeagley-com
