deploy/loadbalancer/nvr-loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-loadbalancer
  namespace: nvr
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: frigate.jeffbeagley.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate
            port: 
              number: 5000
  - host: ha.jeffbeagley.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port: 
              number: 8123
  - host: node-red.jeffbeagley.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red
            port: 
              number: 1880
